modals and all buttons on site seem to be working, love patch fixed after discovering it was broken on searchCard

--- a/src/components/search/Search.css
+++ b/src/components/search/Search.css
@@ -2,32 +2,45 @@
 
 .unlovedBtn {
   border: solid 2px rgba(231, 111, 129, 0.808) !important;
-  color: rgba(222,72,72,0.7443590255591055)
+  color: rgba(222,72,72,0.7443590255591055);
+  margin-right: 1px;
+  margin-left: 1px;
+  
 }
 
 .unhatedBtn {
   border: solid 2px rgb(40, 249, 179) !important;
   color: rgb(40, 249, 179);
+  margin-right: 1px;
+  margin-left: 1px;
 }
 
 .lovedBtn {
   background-color: rgba(222,72,72,0.7443590255591055) !important;
   color: white !important;
+  margin-right: 1px;
+  margin-left: 1px;
 }
 
 .hatedBtn {
   background-color: rgb(178, 245, 223) !important;
   border: solid 2px rgb(40, 226, 164) !important;
-  color: white !important;
+  color: rgb(19, 19, 19) !important;
+  margin-right: 1px;
+  margin-left: 1px;
 }
 
 .forgetBtn {
   border: solid 2px rgb(66, 142, 235) !important;
   color:  rgb(66, 142, 235) !important;
+  margin-right: 1px;
+  margin-left: 1px;
 }
 
 .buttonRow {
-  align-self: flex-end;
+  display: flex;
+  flex-direction: row;
+  justify-content: left;
 }
 
 /* search result cards */
@@ -49,4 +62,15 @@
 .movieSearchInput {
   padding-left: 1em;
   padding-top: .5em;
+}
+
+.movieCard {
+  margin-bottom: 20px;
+  margin-right: 2px;
+  margin-left: 5px;
+  max-width: 200px;
+}
+
+.overflow {
+  overflow: hidden;
 }
